typo angular.json

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "1.5mb",
-                  "maximumError": "1.tmb"
+                  "maximumError": "1.5mb"
                 },
                 {
                   "type": "anyComponentStyle",
